=== 0.4.0 / unreleased

* Faster time scoped searches when using single line log formats
* result[:line] has been replaced with result[:entry]

=== 0.3.4 / 2011-08-07

* Updated gemspec
* See History.txt to review API changes from 0.2.0

=== 0.3.3 / 2011-08-05

* Tested with rubinius at #rbxday party
* Fix for ruby 1.8.7


=== 0.3.2 / 2011-08-03

* Patch to ignore simplecov load error

=== 0.3.0 / 2011-08-02

* To search a file, specify a File object as the source.
  (Support for file paths will be restored in the future.)
* Use :log_format as the key to specify your custom format and fields (:pattern is deprecated).

=== 0.2.0 / 2011-03-08

* Support for Multiline log entries. See README.md
* Time scopes now respect inclusive flag
* #last() no longer supports number of rows as a parameter. Use :span => minutes.
* Fixes for Ruby 1.9.2

=== 0.1.6 / 2011-03-07

* Unsupported. Gem version 0.1.6 == 0.2.0

=== 0.1.5 / 2011-01-21

* Searching with time scopes (#after, #within, #before) are much faster
* Dates used in time scopes are limited to 1901 - 2038
    * The Windows platform limits dates further to 1969 - 2038
* Explicit format string for time forces the old (slower) time scoping code
    * However, this removes the harsh limits on date values

=== 0.1.4 / 2011-01-19

* Add support for Ruby 1.8.5

=== 0.1.3 / 2011-01-18

* Faster (than a turtle)
* Lighter (than a tank)

=== 0.1.2 / 2011-01-17

* Predefined log formats for NCSA Common, NCSA Combined, and Log4r (default)
* Source IO is explicitly closed after each #_search
* Removed instance method #search; use #for.
* Removed instance method #severity

=== 0.1.1 / 2011-01-13

* Scope search by time (after, before, around, or within)
* Explicit format string can be provided to parse non-standard log times
* Reopen (or rewind) source for each #search
* Source parameter creates an IO object (StringIO, File, or Process)

=== 0.1.0 / 2010-12-13

* Search by exact match or regular expression
* Search with custom pattern